Delete TypeCheckingService